@@ -1,3 +1,8 @@
+2016-05-24  Michael Meyer <michael.meyer@greenbone.net>
+
+	* nasl/nasl_builtin_find_service.c (plugin_do_run):
+	Removed null bytes from buffer. Detect also mariadb.
+
 2016-05-24  Hani Benhabiles <hani.benhabiles@greenbone.net>
 
 	* nasl/nasl_crypto.c (md4_data, rc4_data, nasl_get_smb2_sign_key):
